--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 <div class="section">
   <div class="img">
      <!-- Replace this link later with your Kaake section image -->
-     <img src="kaake.png" alt="Kaake Section Image">
+     <img src="Kaake.png" alt="Kaake Section Image">
   </div>
  <h1 style="color:black;position:relative; top:-35px;">KAAKE</h1>
   <div class="menu-item">
@@ -462,7 +462,7 @@
        <img src="https://cdn.glitch.global/e7112cac-cc58-4591-8e62-b5d52df95749/1000632856.jpg?v=1749294056459" class="beverage">
 
     </div>
- <div style=" padding: 10px; font-size:14px;">
+ <div style=" padding: 10px; font-size:5;">
   <div style="display: grid; grid-template-columns: 2fr 1fr 1fr 1fr; gap: 10px;">
     <!-- Header Row -->
     <div><strong></strong></div>
