Revise menu items and add Kaake Pesto Cheese
Updated menu item descriptions and prices, and added new Kaake Pesto Cheese item.

--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
   <div class="menu-item">
     <div class="left">
       <div class="title">Fajita</div>
-      <div class="description">Tortilla, abou zoulouf chicken fahita mix, avocado sauce</div>
+      <div class="description">abou zoulouf chicken fahita mix, avocado sauce</div>
     </div>
     <div class="price">6 $</div>
     <div class="right">
       <div class="title">فاهيتا</div>
-      <div class="description">خبزة التورتيا، دجاج بخلطة أبو الزّلف، صلصة الأفوكادو</div>
+      <div class="description">دجاج بخلطة أبو الزّلف، صلصة الأفوكادو</div>
     </div>
   </div>
 
@@ -226,7 +226,7 @@
       <div class="title">Kafta</div>
       <div class="description">Kafta, hommos, onions, tomato, pickles, fries</div>
     </div>
-    <div class="price">5.5 $</div>
+    <div class="price">6 $</div>
     <div class="right">
       <div class="title">كفتة</div>
       <div class="description">كفتة، حمص، بطاطا، بصل، بندورة، كبيس</div>
@@ -250,13 +250,13 @@
       <div class="title">Fries</div>
       <div class="description">Fries, coleslaw, ketchup, garlic, pickles</div>
     </div>
-    <div class="price">3 $</div>
+    <div class="price">3.5 $</div>
     <div class="right">
       <div class="title">بطاطا</div>
       <div class="description">بطاطا، سلطة ملفوف، ثوم، كتشاب، كبيس</div>
     </div>
   </div>
-</div> <!-- end of Tuna sandwich -->
+</div>
 
 <p class="add-fries" style="text-align:center; font-size:22px; margin-top:20px;">
   🍟 Add Fries +2 $ ————— إضافة بطاطا  +$2
@@ -377,6 +377,17 @@
     <div class="price">4 $</div>
     <div class="right">
       <div class="title">كعكة جبنة و جمبون</div>
+      <div class="description"></div>
+    </div>
+  </div>
+  <div class="menu-item">
+    <div class="left">
+      <div class="title">Kaake Pesto Cheese</div>
+      <div class="description"></div>
+    </div>
+    <div class="price">4 $</div>
+    <div class="right">
+      <div class="title">كعكة جبنة و بيستو</div>
       <div class="description"></div>
     </div>
   </div>
