Add Loaded Fries With Crispy Chicken menu item

--- a/index.html
+++ b/index.html
@@ -221,6 +221,18 @@
     </div>
   </div>
 
+      <div class="menu-item">
+    <div class="left">
+      <div class="title">Loaded Fries With Crispy Chicken</div>
+      <div class="description">Crispy, Fries, Shedder Sauce, special sauce</div>
+    </div>
+     <div class="price">7 $</div>
+    <div class="right">
+       <div class="title">لودد فرايز مع كريسبي دجاج</div>
+      <div class="description">كريسبي، بطاطا، صلصة الجبنة الشيدر، صلصة خاصة</div>
+    </div>
+  </div>
+
   <div class="menu-item">
     <div class="left">
       <div class="title">Kafta</div>
