--- a/index.html
+++ b/index.html
@@ -259,13 +259,25 @@
 
   <div class="menu-item">
     <div class="left">
-      <div class="title">Fries</div>
+      <div class="title">Fries Sandwich</div>
       <div class="description">Fries, coleslaw, ketchup, garlic, pickles</div>
     </div>
     <div class="price">3.5 $</div>
     <div class="right">
       <div class="title">بطاطا</div>
       <div class="description">بطاطا، سلطة ملفوف، ثوم، كتشاب، كبيس</div>
+    </div>
+  </div>
+</div>
+    <div class="menu-item">
+    <div class="left">
+      <div class="title">Fries</div>
+      <div class="description"></div>
+    </div>
+    <div class="price">4 $</div>
+    <div class="right">
+      <div class="title">صحن بطاطا</div>
+      <div class="description"></div>
     </div>
   </div>
 </div>
@@ -504,9 +516,9 @@
     <div>Hendriks Gin</div>            <div>50 $</div> <div>5.5 $</div> <div></div>
     <div>Jagermeister</div>            <div>35 $</div> <div>4 $</div>   <div>1 $</div>
     <div>Jose Cuervo Gold</div>        <div>30 $</div> <div></div>      <div>1 $</div>
-    <div>Ksara Red</div>               <div>20 $</div> <div>3 $</div>   <div></div>
-    <div>Ksara Blanc</div>             <div>20 $</div> <div>3 $</div>   <div></div>
-    <div>Ksara Sunset</div>            <div>20 $</div> <div>3 $</div>   <div></div>
+    <div>White Wine</div>               <div>20 $</div> <div>3 $</div>   <div></div>
+    <div>Rosé Wine</div>             <div>20 $</div> <div>3 $</div>   <div></div>
+    <div>Red Wine</div>            <div>20 $</div> <div>3 $</div>   <div></div>
     <div>Almaza</div>                  <div>1.25 $</div><div></div>     <div></div>
     <div>Beirut Beer</div>             <div>1 $</div>   <div></div>     <div></div>
     <div>Soft Drinks</div>             <div>1 $</div>   <div></div>     <div></div>
