Update title from 'بطاطا' to 'ساندويش بطاطا'

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     </div>
     <div class="price">3.5 $</div>
     <div class="right">
-      <div class="title">بطاطا</div>
+      <div class="title">ساندويش بطاطا</div>
       <div class="description">بطاطا، سلطة ملفوف، ثوم، كتشاب، كبيس</div>
     </div>
   </div>
