Remove 'fries' from menu item descriptions

--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
   <div class="menu-item">
     <div class="left">
       <div class="title">Abou Zoulouf Sandwich</div>
-      <div class="description">Chicken breast, mushroom, onions, pesto, cream cheese, parmesan</div>
+      <div class="description">Chicken breast, mushroom, pesto, cream cheese, parmesan</div>
     </div>
     <div class="price">7 $</div>
     <div class="right">
       <div class="title">ساندويش أبو الزّلف</div>
-      <div class="description">صدر دجاج، فطر، بصل، بيستو، كريم تشيز، جبنة بارميزان</div>
+      <div class="description">صدر دجاج، فطر، بيستو، كريم تشيز، جبنة بارميزان</div>
     </div>
   </div>
 
@@ -236,12 +236,12 @@
   <div class="menu-item">
     <div class="left">
       <div class="title">Kafta</div>
-      <div class="description">Kafta, hommos, onions, tomato, pickles, fries</div>
+      <div class="description">Kafta, hommos, onions, tomato, pickles</div>
     </div>
     <div class="price">6 $</div>
     <div class="right">
       <div class="title">كفتة</div>
-      <div class="description">كفتة، حمص، بطاطا، بصل، بندورة، كبيس</div>
+      <div class="description">كفتة، حمص، بصل، بندورة، كبيس</div>
     </div>
   </div>
 
