Update menu item descriptions and titles

--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
   <div class="menu-item">
     <div class="left">
       <div class="title">Tawouk</div>
-      <div class="description">Chicken breast, fries, coleslaw, garlic, pickles</div>
+      <div class="description">Chicken breast, fries,ketchup, coleslaw, garlic, pickles</div>
     </div>
     <div class="price">5 $</div>
     <div class="right">
       <div class="title">طاووق</div>
-      <div class="description">صدر دجاج، بطاطا، سلطة ملفوف، ثوم، كبيس</div>
+      <div class="description">صدر دجاج، بطاطا، سلطة ملفوف، كتشاب، ثوم، كبيس</div>
     </div>
   </div>
 
@@ -216,7 +216,7 @@
     </div>
      <div class="price">5.5 $</div>
     <div class="right">
-       <div class="title">ساندويش   كريسبي دجاج</div>
+       <div class="title">ساندويش كريسبي دجاج</div>
       <div class="description">كريسبي، خس، صلصة خاصة</div>
     </div>
   </div>
